...G...... [ZBXNEXT-3047] fixed compilation errors on Windows platform with static OpenSSL libraries (Andris, viktors)
...G...PS. [ZBXNEXT-4836] added license information and OpenSSL linking exception to README file, show crypto library version when started with '-V' (Andris)

Bug fixes:
..F....... [ZBX-13719] fixed loss of calc_fnc index in graph edit form (vasilijs)
..F....... [ZBX-13009] fixed percentage calculation on availability reports list page (gcalenko)
.......PS. [ZBX-15132] backported daylight saving related scheduled checks fix from ZBX-12965 (wiper)
...G...... [ZBX-14899] fixed wrong net.tcp.listen values on obsolete Linux systems (kalimulin)
.......PS. [ZBX-15142] fixed time format for vmware performance counters query (MVekslers)
A......... [ZBX-14833] fixed selectHosts option in dservice.get API method to return the list of hosts by IP and proxy (Ivo, Sasha)
.......PS. [ZBX-15062] fixed binary heap trying to reallocate slots on every insert (wiper)
..F....... [ZBX-14805] fixed unauthorized request error when resetting filter after enabling/disabling elements (agriscenko)
..F....... [ZBX-14758] fixed encoding for cookie names and values (Ivo, vmurzins)
..F....... [ZBX-14691] fixed faulty behaviour of mandatory fields in Trigger expression form (vasilijs)
..F....... [ZBX-13505] fixed link coloring in map when related trigger is not monitored (miks)
.......PS. [ZBX-14953] fixed not closed connection with vmware at the end of update session via a call to Logout() (MVekslers)
....I..... [ZBX-14966] removed the notes about sqlite from zabbix_server.conf (MVekslers)
A.F....... [ZBX-14422] fixed SQL queries being logged when accessing API, even if debug mode is disabled (agriscenko)
...G...PS. [ZBX-15027] fixed startup failures due to orphaned or zombie processes remaining when zabbix daemon is terminated during startup (vso)

--------------------------------------------------------------------------------
Changes for 3.0.23
