@@ -679,13 +679,14 @@ static void	lld_simple_groups_get(zbx_uint64_t parent_hostid, zbx_vector_uint64_
  *                                                                            *
  * Function: lld_hostgroups_make                                              *
  *                                                                            *
- * Parameters: groupids         - [IN] sorted list of host groups which       *
+ * Parameters: groupids         - [IN] sorted list of host group ids which    *
  *                                     should be present on the each          *
- *                                     discovered host                        *
+ *                                     discovered host (Groups)               *
  *             hosts            - [IN/OUT] list of hosts                      *
  *                                         should be sorted by hostid         *
- *             del_hostgroupids - [OUT] list of host groups which should be   *
- *                                      deleted                               *
+ *             groups           - [IN]  list of host groups (Group prototypes)*
+ *             del_hostgroupids - [OUT] sorted list of host groups which      *
+ *                                      should be deleted                     *
  *                                                                            *
  ******************************************************************************/
 static void	lld_hostgroups_make(const zbx_vector_uint64_t *groupids, zbx_vector_ptr_t *hosts,
@@ -733,6 +734,12 @@ static void	lld_hostgroups_make(const zbx_vector_uint64_t *groupids, zbx_vector_
 
 			zbx_vector_uint64_append(&host->new_groupids, group->groupid);
 		}
+	}
+
+	for (i = 0; i < hosts->values_num; i++)
+	{
+		host = (zbx_lld_host_t *)hosts->values[i];
+		zbx_vector_uint64_sort(&host->new_groupids, ZBX_DEFAULT_UINT64_COMPARE_FUNC);
 	}
 
 	if (0 != hostids.values_num)
